--- a/src/index.html
+++ b/src/index.html
@@ -1,17 +1,14 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="app.css">
+  <title>Noah's Portfolio Page</title>
 </head>
 
 <body>
-  <div>
-    LOL
-  </div>
+  <div id="app"></div>
 </body>
 
 </html>
