cleaned up inconsistent naming

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" href="app.css">
-  <title>Proevolution Wellness</title>
+  <title>Pro Evolution Wellness</title>
 </head>
 
 <body>
