--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="app.css">
+  <link rel="stylesheet" href="/app.css">
   <title>Pro Evolution Wellness</title>
 </head>
 
