--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" href="styles.css">
-  <title>Pro Evolution Wellness</title>
+  <title>Pro Evolution Wellness Inc. - Redefining Heathcare in Our Community</title>
 </head>
 
 <body style="margin: 0;">
